# Algorithm_puzzles

./: README.md
Array/: CMakeLists.txt
Array/include/: my_array.hpp
Array/src/: CMakeLists.txt  my_array.cpp
Array/tests/: CMakeLists.txt  int_main.cpp  int_tests.cpp  int_tests.hpp  main.cpp  string_main.cpp  string_tests.cpp  string_tests.hpp  tests.cpp  tests.hpp
BFS/: bfs.cpp
Heap_sort/: solution.cpp
Huffman_algo/: decoder.cpp  encoder.cpp
Katas/monoid_basics/: groceries_monoids.cpp  groceries_traditional.cpp
KormenStuff/AVLTree/: CMakeLists.txt  avl_tree.h  main.cpp
KormenStuff/CyclicVector/: CMakeLists.txt  main.cpp
KormenStuff/Heap_sort/: CMakeLists.txt  solution.cpp
KormenStuff/Huffman_algo/: CMakeLists.txt
KormenStuff/KorderSort/: CMakeLists.txt  solution.cpp
KormenStuff/Merge_inversion_counter/: solution.cpp
KormenStuff/MinDistances/: CMakeLists.txt  main.cpp
KormenStuff/NthStat/: solution.cpp
KormenStuff/QuickSort/: solution.cpp
KormenStuff/RadixSortStrings/: solution.cpp
KormenStuff/SimpleTree/: CMakeLists.txt  main.cpp
KormenStuff/SpanningTrees/: CMakeLists.txt  main.cpp
KormenStuff/SplayTree/: CMakeLists.txt  main.cpp  splay_tree.h
KormenStuff/cmake/: CompilerWarnings.cmake
Merge_inversion_counter/: CMakeLists.txt  solution.cpp
NthStat/: CMakeLists.txt  solution.cpp
Pallet_storage/: CMakeLists.txt  solution.cpp
Prioretized_queu/: CMakeLists.txt  solution.cpp
QuickSort/: CMakeLists.txt
RadixSortStrings/: CMakeLists.txt  solution.cpp
Simple_stuff/: task_1206B.cpp  task_1336A.cpp  task_1339A.cpp  task_1348B.cpp  task_1363A.cpp  task_1406B.cpp  task_1451B.cpp  task_1472B.cpp  task_279B.cpp  task_363B.cpp  task_377A.cpp  task_431C.cpp  task_455A.cpp  task_515C.cpp  task_520B.cpp  task_580.cpp  task_580C.cpp  task_702A.cpp
SpanningTrees/: CMakeLists.txt  global.h  main.cpp
Task_1468M_sets/: CMakeLists.txt  solution.cpp
Task_1469C_Fence/: CMakeLists.txt  solution.cpp
Task_380C_brackets/: CMakeLists.txt  solution.cpp
Task_455A_bore/: CMakeLists.txt  solution_455A.cpp
Tasks/: A.cpp  AC_task_278A.cpp  AC_task_278B.cpp  AC_task_278C.cpp  AC_task_278D.cpp  AC_task_278E.cpp  AC_task_278F.cpp  AC_task_284A.cpp  AC_task_284B.cpp  AC_task_284C.cpp  AC_task_284D.cpp  AC_task_284E.cpp  AC_task_284F.cpp  AC_task_285A.cpp  AC_task_285B.cpp  AC_task_285C.cpp  AC_task_285D.cpp  AC_task_285E.cpp  AC_task_285F.cpp  AC_task_286A.cpp  AC_task_286B.cpp  AC_task_286C.cpp  AC_task_286D.cpp  AC_task_286E.cpp  AC_task_288A.cpp  AC_task_288B.cpp  AC_task_288C.cpp  AC_task_302A.cpp  AC_task_302B.cpp  AC_task_302C.cpp  AC_task_302D.cpp  AC_task_302E.cpp  AC_task_308A.cpp  AC_task_308B.cpp  AC_task_308C.cpp  AC_task_308D.cpp  AC_task_308E.cpp  AC_task_309A.cpp  AC_task_309B.cpp  AC_task_309C.cpp  (+292 more)
c_signal_task/: CMakeLists.txt  sin_signal.c
